feat: add style to CV

--- a/style.css
+++ b/style.css
@@ -1,3 +1,59 @@
-body {
-    background-color: lightblue;
+.container {
+  margin: 20px auto;
+  width: 1024px;
+  font-family: "Times New Roman";
+  font-size: 18px;
+  line-height: 1.5;
+  background-color: #fff0fa;
+  box-shadow: 10px 10px 40px -1px rgba(0, 0, 0, 0.23);
+  }
+  header{
+    background-color: rgb(248, 230, 248);
+    height: 300px;
+  }
+  body {
+    box-sizing: border-box;
+    background-color: #f7f5f6;
+  }
+  header h1
+  {
+    position: relative;
+    margin-left: 250px;
+    bottom: 300px;
+    font-size: 36pt;
+  }
+  header h2
+  {
+    position: relative;
+    margin-left: 250px;
+    bottom: 300px;
+    font-style: italic;
+  }
+  .Avatar{
+    position: relative;
+    left: 20px;
+    top: 10px;
+  }
+  .Contacts{
+    position: relative;
+    margin-left: 250px;
+    bottom: 300px;
+  }
+  main p{
+    line-height: 1.5pt;
+    position: relative;
+    left: 15px;
+  }
+  main h2{
+    position: relative;
+    left: 15px;
+    text-decoration: underline;
+  }
+  footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    font-size: 0.8rem;
+    background-color: #e3d8f7;
   }
